3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: interactive-app-service
  labels:
    app: interactive-app-service
spec:
  type: NodePort
  selector:
    app: interactive-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
